--- a/IPL_Past_Matches_DataMining.ipynb
+++ b/IPL_Past_Matches_DataMining.ipynb
@@ -5,9 +5,7 @@
     "colab": {
       "name": "IPL Past Matches DataMining.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOAYYWudqIh6yeaCLEe1EMA",
-      "include_colab_link": true
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -18,16 +16,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/VedantMulherkar1211/Data-Mining-and-warehousing-Project/blob/main/IPL_Past_Matches_DataMining.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
